--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -30,7 +30,7 @@
     font-family: 'immortalregular';
 }
 .page-header{
-  text-align: center;
+  text-align: left;
 }
 .center{
   text-align: center;
